# excelAnalyser

./: .replit  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
attached_assets/: Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Table-showlegend-Did--1750820515621_1750820515622.txt
utils/: data_analyzer.py  kpi_generator.py  ppt_analyzer.py  visualizations.py
